# multi_compare

./: Cargo.toml  README.md
src/: compare_macro.rs  lib.rs  test.rs
